--- a/myFirstWebsite/index.html
+++ b/myFirstWebsite/index.html
@@ -25,11 +25,11 @@
 
     <div class="content">
         <h1>Rácz Bálint</h1>
-        <h3 id=rend >Rendszerüzemeltető</h3>
+        <h3 id=rend >Greenfox-Rendszerüzemeltető</h3>
 
         <div class=about>
-            <p>Én egy 24 éves srác vagyok, aki szeretne az IT szektorba belekostólni.
-                Budapessten élek már több mint egy éve, elötte vidéken laktam egy kis faluban.</p>
+            <p>Én egy 24 éves srác vagyok, aki szeretne az IT szektorba belekóstolni. 
+                </p>
             <p> Érettségivel rendelkezem, és szeretném továbbképezni magam. Izgatottan várom hogy mit hoz a jövő.</p>
         </div>
 
@@ -38,7 +38,7 @@
         <h2>Definíciók</h2>
 
         <div>
-            <h3>Számológép</h3>
+            <h3>Logikai kapu</h3>
             <p>Egy olyan idealizált vagy fizikai eszköz ami logikai alapmüveletet valósít meg egy vagy több bináris
                 bemeneten és
                 produkál egy bináris kimenetet.</p>
@@ -67,7 +67,7 @@
                 az
                 internetre vagy egy magánhálózatra kötött bármilyen erőforrás számára.</p>
 
-            <h3>WWW</h3>
+            <h3>HTTP Protokoll</h3>
             <p>Egy alkalmazás protokol elosztott, együttműködő és hipermédiás információs rendszerek részére. A World
                 Wide
                 Web adat
